<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10sp"
        android:layout_margin="5sp"
        app:cardBackgroundColor="#11999E">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">



    <TextView
        android:id="@+id/poet_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:minHeight="30dp"
        android:padding="8dp"
        android:text="@string/anjani_kumar"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#717171"/>

    <TextView
        android:id="@+id/poetry_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:text="@string/you_are_the_start_of_the_week_or_the_end_of_it_and_according_to_the_beatles_you_creep_in_like_a_nun_you_re_the_second_full_day_the_kids_have_been_away_with_their_father_the_second_full_day_of_an_empty_house_sunday_i_ve_missed"
        android:minHeight="60sp"
        android:padding="5sp"
        android:textColor="@color/black"
        android:textSize="16sp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#717171"/>


    <TextView
        android:id="@+id/datetime_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center_vertical|end"
        android:minHeight="20dp"
        android:text="@string/_15_jan_2022"
        android:textColor="@color/white"
        android:textStyle="bold"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#717171"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datetime_textView">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/update_btn"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/update"
            android:background="#E4F9F5"
            android:textAllCaps="false" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/delete_btn"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:textColor="#D13706"
            android:background="#40514E"
            android:shadowColor="#0D7377"
            android:gravity="center"
            android:text="@string/delete"
            android:textAllCaps="false" />

    </LinearLayout>

    </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>